--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,8 +1,1 @@
-{ 
-  "dependencies": {
-    "express": "^4.19.2",
-    "googleapis": "^142.0.0",
-    "moment": "^2.30.1",
-    "open": "^10.1.0"
-  }
-}
+{"name":"your-project-name","version":"1.0.0","main":"src/app.js","scripts":{"start":"node src/app.js"},"dependencies":{"dotenv":"^16.4.5","express":"^4.19.2","googleapis":"^142.0.0","moment":"^2.30.1","open":"^10.1.0"}}
