--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,9 +18,10 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "bootstrap": "^5.3.3",
     "ng-zorro-antd": "^18.1.1",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.7.0",
     "vercel": "^37.1.2",
     "zone.js": "~0.14.3"
   },
