--- a/front-end/package.json
+++ b/front-end/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "ng-zorro-antd": "^18.1.1",
     "rxjs": "~7.8.0",
