--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
     "ng-zorro-antd": "^18.1.1",
+    "ngx-spinner": "^17.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.7.0",
     "vercel": "^37.1.2",
