--- a/back-end/package.json
+++ b/back-end/package.json
@@ -11,6 +11,7 @@
     "express": "^4.19.2",
     "googleapis": "^142.0.0",
     "moment": "^2.30.1",
+    "node-localstorage": "^3.0.5",
     "open": "^10.1.0"
   }
 }
