--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.0.0",
     "axios": "^1.7.5",
     "bootstrap": "^5.3.3",
+    "lodash": "^4.17.21",
     "ng-zorro-antd": "^18.1.1",
     "ngx-spinner": "^17.0.0",
     "rxjs": "~7.8.0",
@@ -32,6 +33,7 @@
     "@angular/cli": "^18.0.6",
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/lodash": "^4.17.7",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
