--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,9 +1,9 @@
 {
   "name": "your-project-name",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "./index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node ./index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -11,7 +11,6 @@
     "express": "^4.19.2",
     "googleapis": "^142.0.0",
     "moment": "^2.30.1",
-    "node-localstorage": "^3.0.5",
     "open": "^10.1.0"
   }
 }
