--- a/back-end/package.json
+++ b/back-end/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "googleapis": "^142.0.0",
     "moment": "^2.30.1",
     "open": "^10.1.0"
